#1 [Fix] Header, Slide Component z-index

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ li {
   width: 100%;
   height: 5rem;
   background-color: #dde0ea;
+  z-index: 1;
 }
 
 .contents {
